syntax = "proto2";
package buffer;

message GCBattlePveFailedNoticeProto {
  optional int32 msgType = 1[default = 21003];//协议号
   optional int32 status= 2;//协议状态
  optional int32 roomId= 3;//房间ID
  optional int32 cost= 4;//消耗数量
  optional int32 addStep= 5;//增加步数
}